# fever-code-challenge

./: .env  .env.local  .env.remote  .env.test  .gitignore  Dockerfile  Makefile  README.md  Taskfile.dist.yml  docker-compose.yml  instructions.md  pyproject.toml
alembic/: env.py
alembic/versions/: a3cbf144eaa5_create_events_table.py
fever/: config.py
fever/api/: main.py
fever/api/use_cases/: __init__.py  get_events.py
fever/api/v1/: __init__.py
fever/api/v1/endpoints/: events.py
fever/db/: base.py  session.py
fever/event_reader/: main.py  parser.py
fever/event_reader/use_cases/: __init__.py  read_events.py
fever/models/: event.py
fever/schemas/: __init__.py  base.py  event_in.py  event_list.py  event_summary.py
tests/: conftest.py
tests/api/: test_get_events.py
tests/event_reader/: test_read_events.py
